项目单增加费用统计报表，BI增加json表格

--- a/EmpInfo/Views/Account/Login.cshtml
+++ b/EmpInfo/Views/Account/Login.cshtml
@@ -391,7 +391,7 @@
                 </p>
                 <p class="text-info small">
                     <span class="glyphicon glyphicon-warning-sign" aria-hidden="true"></span>
-                    此系统支持安卓、苹果手机或平板自带浏览器以及Chrome、IE10+桌面浏览器；登陆或操作如有问题可联系系统管理员：李逸焊（3006；liyihan.ic@truly.com.cn)
+                    此系统支持安卓、苹果手机或平板自带浏览器以及Chrome、IE10+桌面浏览器；登陆或操作如有问题可联系系统管理员：李逸焊（3006；liyihan@trulyopto.cn)
                 </p>
                 @*<p class="text-info small">
                     <i class="fa fa-android"></i> 安卓APP版本：<a href="@ViewData["appUrl"]" target="_blank">点此下载</a>
