--- a/EmpInfo/Views/Admin/AuditorSetting.cshtml
+++ b/EmpInfo/Views/Admin/AuditorSetting.cshtml
@@ -84,22 +84,28 @@
                     radio: true
                 }, {
                     field: "bill_type",
-                    title: "单据类型"
+                    title: "单据类型",
+                    width: "10%"
                 }, {
                     field: "relate_value",
-                    title: "厂牌"
+                    title: "厂牌",
+                    width: "10%"
                 }, {
                     field: "name",
-                    title: "姓名"
+                    title: "姓名",
+                    width: "10%"
                 }, {
                     field: "relate_type",
-                    title: "关联值"
+                    title: "关联值",
+                    width: "20%"
                 }, {
                     field: "cond1",
-                    title: "条件1"
+                    title: "条件1",
+                    width: "25%"
                 }, {
                     field: "cond2",
-                    title: "条件2"
+                    title: "条件2",
+                    width: "25%"
                 }
             ]
         });
