--- a/EmpInfo/Views/Apply/BeginApplyXA.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyXA.cshtml
@@ -361,14 +361,14 @@
                                 <input type="text" class="form-control" name="share_percent" placeholder="分摊比例%"/> 
                             </div>
                         </div>
-                        <div class="row" style="margin-top:8px;">
+                        @*<div class="row" style="margin-top:8px;">
                             <div class="col-xs-12 col-sm-6">
                                 <select class="form-control" name="share_dept"></select>
                             </div>
                             <div class="col-xs-12 col-sm-6">
                                 <input type="text" class="form-control" name="share_percent" placeholder="分摊比例%"/> 
                             </div>
-                        </div>
+                        </div>*@
                         <button type="button" class="btn btn-sm btn-primary" id="btnAddShare" style="margin-top:6px;"><i class="fa fa-plus"></i> 添加分摊明细</button>
                         <div class="text-danger small" style="margin-top:6px;"><i class="fa fa-info-circle"></i> 比例只录数字，不用录%；所有部门的分摊比例之和必须等于100%</div>                  
                     </div>
