--- a/EmpInfo/Views/K3/AccountReset.cshtml
+++ b/EmpInfo/Views/K3/AccountReset.cshtml
@@ -132,7 +132,7 @@
             <li><span class="glyphicon glyphicon-hand-right"></span></li>
             <li><a href="@Url.Content("~/Home/Index")">主页</a></li>
             <li><a href="@Url.Content("~/Home/WorkGroupIndex")">智慧办公</a></li>
-            <li class="active">K3重开通|重置密码</li>
+            <li class="active">K3自助重开通|重置密码</li>
         </ol>
     </div>
     <div class="panel-body">
@@ -208,7 +208,7 @@
                         1. 重开通/解除禁用：成功后请于当天登陆K3系统，否则可能会被再次禁用
                     </p>
                     <p>
-                        2. 重置密码：默认重置后的密码都是<span style="font-weight:bold;">k3,456</span>，请及时修改为你自己的密码
+                        2. 重置密码：成功后请及时修改为你自己的密码，默认重置后的密码都是 <span style="font-weight:bold;">k3,456</span>
                     </p>
                     <p>
                         3. 选择了哪个账套，请填写哪个账套的登录名。因为有一些同事的K3登录名不是他本人的姓名
