--- a/EmpInfo/Views/Report/MQHRTalkReport.cshtml
+++ b/EmpInfo/Views/Report/MQHRTalkReport.cshtml
@@ -94,10 +94,6 @@
                     field: "id",
                     visible:false
                 },
-                //{
-                //    field: "sys_no",
-                //    title: "流水号"
-                //},
                 {
                     field: "dep_name",
                     title: "人事部门",
@@ -105,7 +101,11 @@
                 }, {
                     field: "name",
                     title: "离职人"
-                }, 
+                },
+                {
+                    field: "card_number",
+                    title: "厂牌"
+                },
                 {
                     field: "leave_date",
                     title: "离职时间",
