--- a/EmpInfo/Views/Report/XAReport.cshtml
+++ b/EmpInfo/Views/Report/XAReport.cshtml
@@ -187,6 +187,14 @@
                     <div class="lbText">项目名称：</div>
                     <input type="text" class="form-control" name="projectName" style="margin:6px 0;" />
                 </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="lbText">申请部门：</div>
+                    <input type="text" class="form-control" name="deptName" style="margin:6px 0;" />
+                </div>
+                <div class="col-xs-12 col-sm-6 col-md-4">
+                    <div class="lbText">当前节点：</div>
+                    <input type="text" class="form-control" name="currentNode" style="margin:6px 0;" />
+                </div>
             </div>
         </form>
         <div class="btn-group btn-group-justified" role="group" style="margin-bottom:20px;margin-top:4px;">
