增加委外加工申请流程

--- a/EmpInfo/Views/Apply/BeginApplyXA.cshtml
+++ b/EmpInfo/Views/Apply/BeginApplyXA.cshtml
@@ -174,6 +174,10 @@
                     var shareInfoObj = [];
                     var totalPercent = 0;
                     for (var i = 0; i < shareDeptSelect.length; i++) {
+                        if ($(shareDeptSelect[i]).val() == "") {
+                            toastr.error("分摊部门不能为空！");
+                            return;
+                        }
                         if (!utils.testIsFloat($(sharePercentInput[i]).val())) {
                             toastr.error("分摊比例必须填写数字格式");
                             return;
@@ -454,7 +458,7 @@
             <p>
                 1. 流程步骤：流程开始--->提交申请--->收益提供人审批(如没有可跳过)--->设备科负责人审批--->生产部主管审批--->部门总经理审批--->
                 项目初审--->采购部接单--->申请人上传施工清单--->设备科负责人处理--->项目类别负责人(监控类/网络类)--->节省与监督--->采购部上传报价单--->
-                管理部会签（项目大类负责人、分摊部门总经理）--->部门总经理确认--->审核部最终确认--->申请人验收项目--->设备负责人验收--->
+                管理部会签（项目大类负责人、申请部门总经理、分摊部门总经理）--->审核部最终确认--->申请人验收项目--->设备负责人验收--->
                 生产主管验收--->部门总经理验收--->信息管理部验收（网络类）--->项目大类负责人验收--->流程结束。
                 <br/>
                 2. 如果部门有设置CEO，那么部门总经理审批后，采购部接单前，系统会推送通知给CEO。
