--- a/EmpInfo/Views/Apply/BeginAuditMTApply.cshtml
+++ b/EmpInfo/Views/Apply/BeginAuditMTApply.cshtml
@@ -148,7 +148,7 @@
                                 保养时间（小时）:
                             </span>
                             <span class="b-input">
-                                <span class="input-group date datePicker">
+                                <span class="input-group">
                                     <input class="form-control" type="text" name="maintence_hours" placeholder="自动计算" readonly />
                                     <span class="input-group-addon">小时</span>
                                 </span>
